@@ -1,6 +1,6 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2004-2007 by Konstantin V. Arkhipov                     *
+ *   Copyright (C) 2004-2008 by Konstantin V. Arkhipov                     *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -50,9 +50,9 @@
 			try {
 				if ($this->link = @fsockopen($host, $port, $errno, $errstr, 1)) {
 					$this->alive = true;
-				
+					
 					$this->buffer = $buffer;
-				
+					
 					stream_set_blocking($this->link, true);
 				}
 			} catch (BaseException $e) {/*_*/}
@@ -60,6 +60,11 @@
 		
 		public function clean()
 		{
+			if (!$this->link) {
+				$this->alive = false;
+				return null;
+			}
+			
 			$this->sendRequest("flush_all\r\n");
 			
 			// flushing obligatory response - "OK\r\n"
@@ -70,8 +75,10 @@
 		
 		public function get($index)
 		{
-			if (!$this->link)
+			if (!$this->link) {
+				$this->alive = false;
 				return null;
+			}
 			
 			$command = "get {$index}\r\n";
 			
